special-pod-w-annotation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-242 
  annotations:
    cni.projectcalico.org/ipv4pools: '["242-pool"]' 
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
