02-cloisonne-default.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: cloisonne-ns
spec:
  podSelector: {}
  ingress:
  - from:
      - podSelector: {}
