03-std-egress-deny23.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-egress-23
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress: 
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
          except:
              - 23.23.23.23/32
            ##  - 1.0.0.1/32
      ports:
        - protocol: TCP
          port: 80
