04-deny-api.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-api
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress: 
   - to:
    - ipBlock:
        cidr: 10.3.0.10/32
