04-std-denyone.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-api
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress: 
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
          except:
              - 1.1.1.1/32
            ##  - 1.0.0.1/32
      ports:
        - protocol: TCP
          port: 80
