05-gnp-deny23.yml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: gnp-deny23
spec:
  order: 10
  namespaceSelector: kubernetes.io/metadata.name not in {'rose'}
  types:
    - Egress
  egress:    
    - action: Deny
      protocol: TCP
      source: {}
      destination:
        nets:
        - 23.23.23.23/32
        ports: 
        - 80
        - 443
