06-gnp-allowhttp.yml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allowhttp
spec:
  order: 20
  types:
    - Egress
  egress:    
    - action: Allow
      protocol: TCP
      source: {}
      destination:
        ports: 
        - 80
        - 443
