06-gnp-egress-allow-any-all-http-s.yml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: gnp-egress-allow-any-http-s
spec:
  order: 20
  namespaceSelector: kubernetes.io/metadata.name not in {'rose'} && ! kubernetes.io/metadata.name starts with 'kube-' && ! kubernetes.io/metadata.name starts with 'calico-' && ! kubernetes.io/metadata.name starts with 'tigera-'
  types:
    - Egress
  egress:    
    - action: Allow
      protocol: TCP
      source: {}
      destination:
        ports: 
        - 80
        - 443
