07-gnp-loghttp.yml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: loghttp
spec:
  order: 15
  types:
    - Egress
  egress:    
    - action: Log
      protocol: TCP
      source: {}
      destination:
        ports: 
        - 80
        - 443
