08-gnp-egress-allow-dns.yml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: gnp-egress-allow-dns
spec:
  order: 1
  namespaceSelector: kubernetes.io/metadata.name not in {'rose'} && ! kubernetes.io/metadata.name starts with 'kube-' && ! kubernetes.io/metadata.name starts with 'calico-' && ! kubernetes.io/metadata.name starts with 'tigera-'
  types:
    - Egress
  egress:    
    - action: Allow
      protocol: TCP
      destination:
        ports: 
        - 53
    - action: Allow
      protocol: UDP
      destination:
        ports: 
        - 53
