09-allow-webdemosrv.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allowwebdemosrv
spec:
  podSelector:
    matchLabels:
      run: echoserver
  ingress:
  - ports:
    - protocol: TCP
      port: 8080
    - protocol: TCP
      port: 1234
    from:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
    - podSelector:
        matchLabels:
          run: echoserver
    - podSelector:
        matchLabels:
          run: netshoot
